# HW2

./: CMakeLists.txt  challenge.c  challenge_room_system_fields.h  challenge_system.c  challenge_system.h  challenge_system_test_1.c  student.txt  system_additional_types.h  visitor_room.c  visitor_room.h  מידע נוסף מהמתרגל האחראי.docx
